# manifold-filter

./: .gitignore  Cargo.toml
crates/dual/: Cargo.toml
crates/dual/src/: lib.rs  manifold.rs  optimize.rs
crates/dual_derive/: Cargo.toml
crates/dual_derive/src/: lib.rs
crates/filter/: Cargo.toml
crates/filter/examples/: eskf_nees.rs  ins_15state.rs  integration_fidelity.rs  mc_validation.rs
crates/filter/examples/support/: ins.rs
crates/filter/src/: lib.rs
crates/manifold/: Cargo.toml
crates/manifold/src/: diff.rs  dual.rs  lib.rs  lib.rs~
crates/manifold/src/manifold/: dynamics.rs  mod.rs  product.rs  product_macro.rs  rn.rs  so2.rs  so3.rs
