[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
nalgebra = { version = "0.35", default-features = false, features = ["libm"] }
num-dual = { version = "0.14.1" }
num-traits = { version = "0.2.19", default-features = false }
simba = { version = "0.10", default-features = false }
approx = { version = "0.5", default-features = false }
dual = { path = "crates/dual" }
dual_derive = { path = "crates/dual_derive" }
manifold = { path = "crates/manifold" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
